fix bug #65391

Unable to send vary header user-agent when
ob_start('ob_gzhandler') is called